2007-04-29  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13544
          REGRESSION (r21120): Member profile frame not erased at Yahoo! Answers

        Test: fast/repaint/layer-hide-when-needs-layout.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setStyle): If we get a layout hint, we count on
        layout() or updateLayerPositions() to repaint. In the case of a layer
        going invisible, however, we need to repaint here since neither of the
        above will do it.

2007-04-29  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=13544
          REGRESSION (r21120): Member profile frame not erased at Yahoo! Answers

        * fast/repaint/layer-hide-when-needs-layout-expected.checksum: Added.
        * fast/repaint/layer-hide-when-needs-layout-expected.png: Added.
        * fast/repaint/layer-hide-when-needs-layout-expected.txt: Added.
        * fast/repaint/layer-hide-when-needs-layout.html: Added.


Canonical link: https://commits.webkit.org/17698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21186 268f45cc-cd09-0410-ab3c-d52691b4dbfc